Fixed overflow-y style

--- a/src/index.css
+++ b/src/index.css
@@ -140,7 +140,7 @@ button {
 
 .memory-list-container {
   height: 150px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .memory-list {
